--- a/Yella/LoginPage.xaml
+++ b/Yella/LoginPage.xaml
@@ -10,15 +10,9 @@
             VerticalOptions="Center">
 
             <Image
-                Source="octopus.png"
+                Source="splash.png"
                 SemanticProperties.Description="Cute dot net bot waving hi to you!"
                 HeightRequest="200"
-                HorizontalOptions="Center" />
-
-            <Label
-                Text="Hello!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
                 HorizontalOptions="Center" />
 
             <Label
@@ -30,13 +24,20 @@
 
 						<Entry x:Name="UsernameTxt" Placeholder="@username"  />
 						<Entry x:Name="PasswordTxt" Placeholder="@Password" />
+			       <Label 
+			        Text="Forget Password"
+			        VerticalOptions="Center" 
+			        HorizontalOptions="Start" >
 
+						  </Label>
+<CarouselView>
+
+</CarouselView>
             <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
+                x:Name="LoginButton"
+                Text="Yella"
                 Clicked="LoginValidation"
-                HorizontalOptions="Center" />
+                HorizontalOptions="Center" MinimumWidthRequest="300" />
 
         </VerticalStackLayout>
     </ScrollView>
