--- a/Yella/Resources/Styles/Colors.xaml
+++ b/Yella/Resources/Styles/Colors.xaml
@@ -4,8 +4,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="Primary">Black</Color>
-    <Color x:Key="SubPrimary">#512BD4</Color>
+    <Color x:Key="Primary">#4FC029</Color>
+    <Color x:Key="SubPrimary">#4FC029</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
     <Color x:Key="Tertiary">#006660</Color>
     <Color x:Key="White">White</Color>
