--- a/Yella/views/IntroPage.xaml
+++ b/Yella/views/IntroPage.xaml
@@ -2,27 +2,57 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 						xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-						xmlns:viewModels ="clr-namespace:Yella.ViewModel"
-						xmlns:models ="clr-namespace:Yella.Model"
+						xmlns:viewModels="clr-namespace:Yella.ViewModel"
+						xmlns:models="clr-namespace:Yella.Model"
 						x:Class="Yella.views.IntroPage"
 						x:DataType="viewModels:IntroPageViewModel"
 						Shell.NavBarIsVisible="False"
-						Title="IntroPage"
-						>
-	<StackLayout Margin="10">
-		<CarouselView ItemsSource="{Binding IntoScreens}">
-			<CarouselView.ItemTemplate>
-				<DataTemplate x:DataType="models:IntroPageModel">
-					<Grid RowDefinitions="60*,40*">
-						<Image Source="{Binding ImageName}" Aspect="AspectFit"></Image>
-						<VerticalStackLayout Grid.Row="1">
-							<Label Text="{Binding Title}" FontSize="28" FontAttributes="Bold"></Label>
-							<Label Text="{Binding Description}" FontSize="20" TextColor="Gray"></Label>
-						</VerticalStackLayout>
+						NavigationPage.HasNavigationBar="False"
+						Title="IntroPage">
+	<Grid Margin="50" RowDefinitions="0.05*, 0.5*,0.3*, 0.1*">
+		<StackLayout Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center" Orientation="Vertical" Spacing="10">
+			<Image Source="yella.svg"></Image>
+			<Label Text="نسهل توصيل الطلبات بينك وبين الزبون" FontFamily="Arial" TextColor="Gray " Margin="20,0,0,0"></Label>
 
-					</Grid>
-				</DataTemplate>
-			</CarouselView.ItemTemplate>
-		</CarouselView>
-	</StackLayout>
+		</StackLayout>
+		<StackLayout Margin="10" Grid.Row="2" Orientation="Vertical">
+			<CarouselView IndicatorView="IntroProgressIndicator" ItemsSource="{Binding IntoScreens}"
+										HorizontalOptions="FillAndExpand" Loop="False">
+				<CarouselView.ItemTemplate>
+					<DataTemplate x:DataType="models:IntroPageModel">
+						<Grid RowDefinitions="60*,40* ">
+							<Image Grid.Row="0" Source="{Binding ImageName}" WidthRequest="360" HeightRequest="200" Aspect="AspectFit"></Image>
+							<VerticalStackLayout Grid.Row="1" Spacing="8">
+								<!--<Label Text="{Binding Title}" FontSize="28" FontAttributes="Bold"></Label>
+							<Label Text="{Binding Description}" FontSize="20" TextColor="Gray"></Label>-->
+							</VerticalStackLayout>
+						</Grid>
+					</DataTemplate>
+				</CarouselView.ItemTemplate>
+			</CarouselView>
+			<StackLayout Orientation="Horizontal" Margin="10">
+				<IndicatorView x:Name="IntroProgressIndicator" IndicatorColor="LightGray"
+											SelectedIndicatorColor="{ x:StaticResource Primary}" IndicatorSize="6" />
+			</StackLayout>
+		</StackLayout>
+		<StackLayout Grid.Row="4" Spacing="10" Margin="10">
+			<Frame HeightRequest="45" BackgroundColor="{x:StaticResource Primary}">
+				<Label Text="Yella" TextColor="White" Margin="0,0,0,-10" HorizontalOptions="Center" ></Label>
+			</Frame>
+			<Label LineBreakMode="WordWrap" HorizontalOptions="Center">
+				<Label.FormattedText>
+					<FormattedString>
+						<Span Text="Don’t have an account? " TextColor="Gray" />
+						<Span Text="Register" FontSize="14" TextColor="{x:StaticResource Primary}">
+							<Span.GestureRecognizers>
+								<TapGestureRecognizer Command="{Binding TapCommand}" />
+							</Span.GestureRecognizers>
+						</Span>
+					</FormattedString>
+				</Label.FormattedText>
+			</Label>
+		</StackLayout>
+
+	</Grid>
+
 </ContentPage>
