--- a/Yella/AppShell.xaml
+++ b/Yella/AppShell.xaml
@@ -4,11 +4,15 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Yella.views"
-    Shell.FlyoutBehavior="Disabled">
+		Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title=""
         ContentTemplate="{DataTemplate local:IntroPage}"
         Route="IntroPage" />
 
+       <ShellContent
+        Title="Dashboard"
+        ContentTemplate="{DataTemplate local:DashboardView}"
+        Route="DashboardView" />
 </Shell>
