--- a/Yella/views/IntroPage.xaml
+++ b/Yella/views/IntroPage.xaml
@@ -8,11 +8,12 @@
 						x:DataType="viewModels:IntroPageViewModel"
 						Shell.NavBarIsVisible="False"
 						NavigationPage.HasNavigationBar="False"
-						Title="IntroPage">
+						Title="IntroPage" BackgroundColor="White">
 	<Grid Margin="50" RowDefinitions="0.05*, 0.5*,0.3*, 0.1*">
 		<StackLayout Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center" Orientation="Vertical" Spacing="10">
 			<Image Source="yella.svg"></Image>
-			<Label Text="نسهل توصيل الطلبات بينك وبين الزبون" FontFamily="Arial" TextColor="Gray " Margin="20,0,0,0"></Label>
+			<Label Text="نسهل توصيل الطلبات بينك وبين الزبون" FontFamily="Arial" TextColor="Gray " Margin="50,0,0,0"></Label>
+			<Image Source="backgrounpattern.svg"></Image>
 
 		</StackLayout>
 		<StackLayout Margin="10" Grid.Row="2" Orientation="Vertical">
@@ -37,7 +38,12 @@
 		</StackLayout>
 		<StackLayout Grid.Row="4" Spacing="10" Margin="10">
 			<Frame HeightRequest="45" BackgroundColor="{x:StaticResource Primary}">
-				<Label Text="Yella" TextColor="White" Margin="0,0,0,-10" HorizontalOptions="Center" ></Label>
+				<Label HorizontalTextAlignment="Center"
+							VerticalTextAlignment="Center" Text="Yella" TextColor="White" Margin="0,0,0,-10" HorizontalOptions="Center">
+				</Label>
+				<Frame.GestureRecognizers>
+					<TapGestureRecognizer Command="{Binding SigningCommand}" />
+				</Frame.GestureRecognizers>
 			</Frame>
 			<Label LineBreakMode="WordWrap" HorizontalOptions="Center">
 				<Label.FormattedText>
@@ -45,7 +51,7 @@
 						<Span Text="Don’t have an account? " TextColor="Gray" />
 						<Span Text="Register" FontSize="14" TextColor="{x:StaticResource Primary}">
 							<Span.GestureRecognizers>
-								<TapGestureRecognizer Command="{Binding TapCommand}" />
+								<TapGestureRecognizer Command="{Binding SigningCommand}" />
 							</Span.GestureRecognizers>
 						</Span>
 					</FormattedString>
